# moonlander

./: Cargo.toml  LICENSE  README.md
gemini/: Cargo.toml
gemini/src/: lib.rs  status.rs  verifier.rs
moonrender/: Cargo.toml  README.md
moonrender/src/: config.rs  lib.rs  lines.rs
moonrender/src/types/: mod.rs  text_gemini.rs  text_plain.rs
moonrender/src/types/generic/: heading.rs  link.rs  list.rs  mod.rs  preformat.rs  text.rs
moonrender/src/types/text_gemini/: mod.rs
relm-moonrender/: Cargo.toml
relm-moonrender/src/: error.gemini  lib.rs
src/: config.rs  main.rs
src/gemini/: mod.rs
src/gui/: mod.rs
src/gui/content/: mod.rs
src/gui/header/: address_bar.rs  mod.rs
src/renderer/: mod.rs
src/renderer/types/: mod.rs
src/renderer/types/generic/: heading.rs  link.rs  list.rs  preformat.rs  text.rs
src/renderer/types/text_gemini/: mod.rs
