[package]
name = "moonlander"
version = "0.1.0"
authors = ["Ecmel Berk Canlier <me@ecmelberk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm-moonrender = {path="./relm-moonrender", features=["serde"]}

gdk = "0.12.1"
gtk = "0.8.1"
relm = "0.19.0"
relm-derive = "0.19.0"

log = "0.4.8"
pretty_env_logger = "0.4.0"

anyhow = "1.0.31"
lazy_static = "1.4.0"
directories-next = "1.0.0"

toml = "0.5.6"
serde = {version="1.0.110", features=["derive"]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# optimize dependencies as they are rarely re-built
[profile.dev.package."*"]
opt-level = 3
