[package]
name = "gemini"
version = "0.1.0"
authors = ["Ecmel Berk Canlier <me@ecmelberk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"

rustls = { version = "0.17.0", features = ["dangerous_configuration"] }
webpki = "0.21.2"

lazy_static = "1.4.0"
anyhow = "1.0.31"
log = "0.4.8"
