[package]
name = "moonrender"
version = "0.1.0"
authors = ["Ecmel Berk Canlier <me@ecmelberk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
cairo-rs = "0.8.1"
pango = "0.8.0"
pangocairo = "0.9.0"

log = "0.4.8"
url = "2.1.1"
float-cmp = { version = "0.8.0", no_default_features = true, features = ["std"] }

anyhow = "1.0.31"

serde = { version = "1.0.110", features = ["derive"], optional = true }
