[package]
name = "relm-moonrender"
version = "0.1.0"
authors = ["Ecmel Berk Canlier <me@ecmelberk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serde = ["moonrender/serde"]

[dependencies]
moonrender = {path="../moonrender"}
gemini = {path="../gemini"}

gdk = "0.12.1"
gtk = "0.8.1"
relm = "0.19.0"
relm-derive = "0.19.0"

anyhow = "1.0.31"
url = "2.1.1"
